--- a/G4101_lab5_estadistica_intro-inferencial.qmd
+++ b/G4101_lab5_estadistica_intro-inferencial.qmd
@@ -24,7 +24,7 @@ execute:
 #| label: setup
 #| include: false
 
-library(DescTools)
+library(DescTools)    # funciones estadisticas
 library(tidyverse)
 ```
 
