--- a/G4101_lab7_estadistica_tests1.qmd
+++ b/G4101_lab7_estadistica_tests1.qmd
@@ -20,17 +20,21 @@ execute:
   echo: true
 ---
 
-```{r setup, include=FALSE, warning=F, message=FALSE}
-library(MOTE)
-library(papaja)
-library(GMisc) # para intervalos de confianza
-library(OneTwoSamples) # para intervalos y pruebas
-library(DescTools) # para pruebas
-library(rstatix) # pruebas y tamanho efecto
-library(effectsize) # para tamanho del efecto
-library(itns) # para tamanho del efecto
-library(broom)
+```{r}
+#| label: setup
+#| include: false
+
+library(MOTE)           # tamanho del efecto
+library(papaja)         # presentacion datos
+library(GMisc)          # intervalos de confianza
+library(OneTwoSamples)  # intervalos y pruebas
+library(DescTools)      # pruebas
+library(rstatix)        # pruebas y tamanho efecto
+library(itns)           # tamanho del efecto
+library(tidymodels)     # resumenes tidy y otros
+library(ggstatsplot)    # graficos de pruebas
 library(tidyverse)
+library(easystats)      
 ```
 
 
@@ -39,13 +43,16 @@ library(tidyverse)
 $$H_0 : \sigma^2 = \sigma_0^2$$
 
 ```{r}
-set.seed(4101)
-w = rnorm(n = 10, mean = 1, sd = 0.2)
-var_test1(x = w, sigma2 = 0.2^2, side = 0) # OneTwoSample
-var_test1(x = w, sigma2 = 0.5^2, side = 0) # OneTwoSample
-VarTest(x = w, sigma.squared = 0.5^2,conf.level = .95) # DescTools
+alfa = .05
+w = airquality %>% pull(Temp)
+
+var_test1(x = w, sigma2 = 7^2, side = 0) # OneTwoSample
+
+chi1 = VarTest(x = w, sigma.squared = 7^2, conf.level = 1-alfa) # DescTools
+chi1
+
 interval_var1(x = w) # OneTwoSample
-ci_chisq(s = sd(w), n = length(w),digits = 4) # GMisc
+ci_chisq(s = sd(w), n = length(w), digits = 4) # GMisc
 ```
 
 
@@ -56,10 +63,13 @@ $$H_0 : \sigma_1^2 = \sigma_2^2$$
 $$H_0 : \frac{\sigma_1^2}{\sigma_2^2} = 1$$
 
 ```{r}
-set.seed(4101) 
-x = rnorm(n = 12, mean = 20, sd = 4)
-y = rnorm(n = 10, mean = 20, sd = 5)
-var.test(x,y,ratio = 1,alt = "two.sided",conf = 0.95)
+alfa = .05
+x = mpg %>% filter(manufacturer=='audi') %>% pull(cty)
+y = mpg %>% filter(manufacturer=='ford') %>% pull(cty)
+
+chi2 = var.test(x,y,ratio = 1,alt = "two.sided",conf = 1-alfa)
+chi2
+
 var_test2(x,y,side = 0) # OneTwoSample
 interval_var2(x,y) # OneTwoSample
 ci_F(s1 = sd(x), n1 = length(x), s2 = sd(y), n2 = length(y)) # GMisc
@@ -72,6 +82,7 @@ $$H_0 : \mu = \mu_0$$
 
 ```{r}
 # Ho: mu=13
+alfa = .05
 mu = 13
 sig = 4
 n = 8
@@ -80,19 +91,25 @@ set.seed(4101)
 x = rnorm(n = n,mean = 10,sd = sig)
 
 (z = (mean(x)-mu)/(sig/sqrt(length(x))))
-(zcrit = c(qnorm(0.025), qnorm(0.975)))
+(zcrit = c(qnorm(alfa/2), 
+           qnorm(1-alfa/2)))
 
-ci_z(x = mean(x), sig = sig, n = length(x), conf.level = .95) # GMisc
+ci_z(x = mean(x), sig = sig, n = length(x), conf.level = alfa) # GMisc
 
-z1 = ZTest(x, mu=mu, sd_pop = sig, conf.level = .95) # DescTools
+z1 = ZTest(x, mu=mu, sd_pop = sig, conf.level = alfa) # DescTools
 z1
 z1 %>% tidy()
 
 mean_test1(x, mu=mu, sigma = sig) # OneTwoSamples
 interval_estimate1(x, sigma = sig) # OneTwoSamples
+```
 
-d.z.mean(mu = mu, m1 = mean(x), sig = sig, 
-         sd1 = sd(x), n = n, a = .05)[1:3] %>% 
+
+```{r}
+d.z = d.z.mean(mu = mu, m1 = mean(x), sig = sig, 
+         sd1 = sd(x), n = n, a = alfa)
+
+d.z %>% 
   as_tibble_row() # MOTE
 ```
 
@@ -104,27 +121,47 @@ $$H_0 : \mu = \mu_0$$
 
 ```{r}
 # Ho: mu=7
+alfa=.05
 mu = 7
 
 verm = c(6.1, 5.5, 5.3, 6.8, 7.6, 5.3, 6.9, 6.1, 5.7)
 
-t1 = t.test(x = verm, mu=mu, alt = "two.sided", conf = 0.95)
+t1 = t.test(x = verm, mu=mu, alt = "two.sided", conf = 1-alfa)
 t1
 t1 %>% tidy()
 
-(tcrit = c(qt(0.025,length(verm)-1),qt(0.975,length(verm)-1)))
+(tcrit = c(qt(alfa/2,length(verm)-1),
+           qt(1-alfa/2,length(verm)-1)))
 
-t.mod = lm(verm~1)
-t.mod %>% 
-  tidy(conf.int=T,conf.level=.95)
+t1.mod = lm(verm~1)
+t1.mod %>% 
+  tidy(conf.int=T,conf.level=1-alfa)
+```
 
-d.single.t(m = mean(verm), u = mu, sd = sd(verm), 
-           n = length(verm), a = .05)[1:3] %>% 
+
+```{r}
+d1 = d.single.t(m = mean(verm), u = mu, sd = sd(verm), 
+           n = length(verm), a = alfa)
+
+d1 %>% 
   as_tibble_row() # MOTE
+```
 
-cohens_d(verm, mu = mu, ci = .95) # effectsize
 
-hedges_g(verm, mu = mu, ci = .95) # effectsize
+```{r}
+cohens_d(verm, mu = mu, ci = 1-alfa) # effectsize
+
+hedges_g(verm, mu = mu, ci = 1-alfa) # effectsize
+```
+
+
+```{r}
+gghistostats(tibble(verm),verm,
+             test.value = mu,
+             type = 'p',
+             effsize.type = 'unbiased',
+             conf.level = 1-alfa,
+             bf.message = F)
 ```
 
 
@@ -133,11 +170,12 @@ hedges_g(verm, mu = mu, ci = .95) # effectsize
 $$H_0 : \mu_1 = \mu_2$$
 
 ```{r}
-# Ho: Diferencia en medias = 0
+alfa = .05
 A = c(25, 40, 34, 37, 38, 35, 29, 32, 35, 44, 27, 33, 37, 38, 36)
 B = c(45, 37, 36, 38, 49, 47, 32, 41, 38, 45, 33, 39, 46, 47, 40)
 
-DF = tibble(Val=c(A,B), Grp=c(rep(c('A','B'),each=length(A))))
+DF = tibble(Val = c(A,B), 
+            Grp = c(rep(c('A','B'),each=length(A))))
 
 DF %>% 
   ggplot() + 
@@ -147,47 +185,69 @@ DF %>%
 DF %>% 
   ggplot(aes(Grp,Val,col=Grp)) + 
   stat_summary(geom = 'pointrange',
-               fun.data = mean_cl_boot,
+               fun.data = mean_cl_normal,
                fun.args = list(conf.int=.95)) + 
   theme_bw()
 
 DF %>% 
   group_by(Grp) %>% 
-  get_summary_stats(type = 'mean_sd')
+  get_summary_stats()
 
-var.test(A,B,conf.level = .95)
+var.test(A,B,conf.level = 1-alfa)
 
-t.test(A, B, mu=0,conf.level = .95) %>% 
+t.test(A, B, mu=0,conf.level = 1-alfa) %>% 
   tidy()
 
-t.test(B, A, mu=0,conf.level = .95) %>% 
+t.test(B, A, mu=0,conf.level = 1-alfa) %>% 
   tidy()
 
-t.test(A, B, mu=0,conf.level = .95, var.equal = T) %>% 
+t.test(A, B, mu=0,conf.level = 1-alfa, var.equal = T) %>% 
   tidy()
 
-t.test(Val~Grp,DF,conf.level = .95)
+t2 = t.test(Val~Grp,DF,conf.level = 1-alfa)
+t2
 
 ci_t2(x1 = mean(A), s1 = sd(A), n1 = length(A), 
       x2 = mean(B), s2 = sd(B), n2 = length(B), 
-      conf.level = .95) # GMisc
+      conf.level = 1-alfa) # GMisc
 
-ti.mod = lm(Val~Grp,DF)
-ti.mod  %>% 
-  tidy(conf.int=T,conf.level=.95)
+t2.mod = lm(Val~Grp,DF)
+t2.mod  %>% 
+  tidy(conf.int=T,conf.level=1-alfa)
+```
 
-cohens_d(A, B, ci = .95, pooled_sd = T)
 
-hedges_g(A, B, ci = .95, pooled_sd = T)
+```{r}
+cohens_d(A, B, ci = 1-alfa, pooled_sd = T)
 
-d.ind.t(m1 = mean(A), m2 = mean(B), 
+hedges_g(Val ~ Grp, data = DF, ci = 1-alfa, pooled_sd = T)
+```
+
+
+```{r}
+d2.ind = d.ind.t(m1 = mean(A), m2 = mean(B), 
         sd1 = sd(A), sd2 = sd(B), 
-        n1 = length(A), n2 = length(B), a = .05)[1:3] %>% 
+        n1 = length(A), n2 = length(B), a = alfa)
+
+d2.ind %>% 
   as_tibble_row() # MOTE
-g.ind.t(m1 = mean(A), m2 = mean(B), 
+
+g2.ind = g.ind.t(m1 = mean(A), m2 = mean(B), 
         sd1 = sd(A), sd2 = sd(B), 
-        n1 = length(A), n2 = length(B), a = .05)[1:3] %>% 
+        n1 = length(A), n2 = length(B), a = alfa)
+
+g2.ind %>% 
   as_tibble_row() # MOTE
+```
+
+
+```{r}
+ggbetweenstats(DF, Grp, Val,
+               var.equal = F,
+               type = 'p',
+               effsize.type = 'unbiased',
+               conf.level = 1-alfa,
+               bf.message = F)
 ```
 
 
@@ -196,45 +256,69 @@ g.ind.t(m1 = mean(A), m2 = mean(B),
 $$H_0 : \mu_D = \mu_{despues} - \mu_{antes} = 0$$
 
 ```{r}
-# Ho: Media de diferencia = 0
+alfa = .05
 Antes = c(13.5,14.6,12.7,15.5,11.1,16.4,13.2,19.3,16.7,18.4)
 Despues = c(13.6,14.6,12.6,15.7,11.1,16.6,13.2,19.5,16.8,18.6)
 
-boxplot(Despues,Antes)
+DF2 = tibble(Val = c(Antes,Despues), 
+             Grp = c(rep(c('A','B'), each=length(Antes))))
 
 t.test(Despues,Antes,mu=0,paired = T) %>% 
   tidy()
+```
 
+
+```{r}
 cohensd_rm(Despues, Antes) # itns
+```
 
+
+```{r}
 # MOTE
-d.dep.t.avg(m1 = mean(Antes),m2 = mean(Despues),
+d2.av = d.dep.t.avg(m1 = mean(Antes),m2 = mean(Despues),
             sd1 = sd(Antes),sd2 = sd(Despues),
-            n = length(Antes),a = .05)[1:3] %>% 
+            n = length(Antes),a = alfa)
+
+d2.av %>% 
   as_tibble_row()
 
-d.dep.t.diff(mdiff = mean(Antes-Despues),sddiff = sd(Antes-Despues),
-             n = length(Antes),a = .05)[1:3] %>% 
+d2.z = d.dep.t.diff(mdiff = mean(Antes-Despues),sddiff = sd(Antes-Despues),
+             n = length(Antes),a = alfa)
+
+d2.z %>% 
   as_tibble_row()
 
-d.dep.t.rm(m1 = mean(Antes),m2 = mean(Despues),
+d2.rm = d.dep.t.rm(m1 = mean(Antes),m2 = mean(Despues),
            sd1 = sd(Antes),sd2 = sd(Despues),
            r = cor(Antes,Despues),n = length(Antes),
-           a = .05)[1:3] %>% 
+           a = alfa)
+
+d2.rm %>% 
   as_tibble_row()
+```
 
 
+```{r}
 ci_t(x = mean(Despues-Antes), s = sd(Despues-Antes), 
-     n = length(Antes), conf.level = .95) # GMisc
+     n = length(Antes), conf.level = 1-alfa) # GMisc
 
 lm((Despues-Antes)~1) %>% 
-  tidy(conf.int=T,conf.level=.95)
+  tidy(conf.int=T,conf.level=1-alfa)
+```
+
+
+```{r}
+ggwithinstats(DF2, Grp, Val,
+              type = 'p',
+              effsize.type = 'unbiased',
+              conf.level = 1-alfa,
+              bf.message = F)
 ```
 
 
 # Prueba t de correlacion
 
-$$H_0 : r = 0$$
+$$H_0 : \rho = 0$$
 
 ```{r}
 alfa = .1
@@ -244,10 +328,16 @@ c = c(3,5,9,5,5,8,13,3,9,9)
 
 cordat = tibble(a,b,c)
 
-cor.test(a,b,method = "pearson",conf = 0.90) %>% 
+r = cor.test(a,b,method = "pearson",conf = 1-alfa)
+r %>% 
   tidy()
 
-CorCI(rho = cor(a,b), n = length(a), conf.level = 0.90) # DescTools
+CorCI(rho = cor(a,b), n = length(a), conf.level = 1-alfa) # DescTools
+
+r.es = r.correl(r = r$estimate, n = r$parameter+2, a = alfa)
+
+r.es %>% 
+  as_tibble_row()
 
 correlation::cor_test(cordat,'a','b',
                       method = 'pearson',
@@ -255,4 +345,51 @@ correlation::cor_test(cordat,'a','b',
 ```
 
 
+```{r}
+ggscatterstats(cordat, a, b,
+               marginal = F,
+               type = 'p',
+               conf.level = 1-alfa,
+               bf.message = F)
+```
 
+
+# Reportes
+
+```{r}
+report::report(chi2)
+```
+
+```{r}
+report::report(t2)
+```
+
+```{r}
+report::report(t2.mod)
+```
+
+```{r}
+report::report(r)
+```
+
+# Estadisticas
+
+```{r}
+apa_print(chi1, n = chi1$parameter+1)
+```
+
+```{r}
+apa_print(chi2)
+```
+
+```{r}
+apa_print(t2)
+```
+
+```{r}
+apa_print(t2.mod)
+```
+
+```{r}
+apa_print(r)
+```
